@@ -1,5 +1,5 @@
-DIST magus-1.3.1.tar.bz2 7358580 RMD160 2a99db268e2d8802b948b1c88c57c53cfb1a5daf SHA1 36b7e33c37ece6482bb141b564c66dc83f6087c9 SHA256 f7f118dff53b53a45d612d870bc2c9fb151d9c3aeea6f006b74fc6ab41dcb4d6
-EBUILD magus-1.3.1.ebuild 4842 RMD160 1de5618d611b23d7c4a00bd5b70082a02b8a0c0a SHA1 c5fddb8fca712f4167987f08609a065574b46f91 SHA256 c2139173f49c6780c70bd64fde78f9cafa409854b15333288e3a419bcfa83af3
-EBUILD magus-99999999.ebuild 4842 RMD160 1de5618d611b23d7c4a00bd5b70082a02b8a0c0a SHA1 c5fddb8fca712f4167987f08609a065574b46f91 SHA256 c2139173f49c6780c70bd64fde78f9cafa409854b15333288e3a419bcfa83af3
-MISC ChangeLog 3520 RMD160 2a3027e86584efcaa2760ef88b83e5aafe84d62e SHA1 75d814d8b24d4eb3b49a22db6c6833a3ac8f1d29 SHA256 21b9018f5a1a3adc057e351539b6370fd6f44ffe59ac7019fe5b58dc6823c250
+DIST magus-1.3.3.tar.bz2 7417528 RMD160 c2dc25fa45523f18dcce511c7697463a004aa083 SHA1 4d61a814d92f69f2d562e4809268e7c0fd205520 SHA256 14d75aba616149e52252fe0f1d0bae796936295aacfb82f1f620d1efd20a8e86
+EBUILD magus-1.3.3.ebuild 5263 RMD160 5b1eb61ba33bfa603a2b735538ca952c597b025d SHA1 56c225cc9228aa64499994ca25623a771f1a89ee SHA256 939d07340ec63c79016392d5c57c9c55988cf83cd2d8c3a7cd47dccd484546c2
+EBUILD magus-99999999.ebuild 5263 RMD160 5b1eb61ba33bfa603a2b735538ca952c597b025d SHA1 56c225cc9228aa64499994ca25623a771f1a89ee SHA256 939d07340ec63c79016392d5c57c9c55988cf83cd2d8c3a7cd47dccd484546c2
+MISC ChangeLog 3690 RMD160 d4a6eeb72b212cbf307ea7a663629d1ae2b7220c SHA1 1575436797c66b283ecd618ce634f83b30a66ac6 SHA256 cd2e3d912096a97777b05f5289e4f7ea486f267c66460fd538c0e865fac97261
 MISC metadata.xml 764 RMD160 1ad76763bf7957a7670d2687db95aee30cc31d3a SHA1 d88e606be5c43297666ed67cdd9a50bee3cc5ae7 SHA256 abda9737ebb13a3ee0438f2ab02f00623298c2a5c85d143199c7c1b5c80bb797
