@@ -2,6 +2,12 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header $
 
+*magus-1.3.3 (28 May 2011)
+
+  28 May 2011; Martin Väth <martin@mvath.de>
+  Version bump and patch for missing autopoint support.
+  Remove old ebuild.
+
 *magus-1.3.1 (10 Mar 2010)
 
   03 Jan 2011; Martin Väth <martin@mvath.de>
